--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ iframe {
     margin-bottom: 10px;
     font-size: 16px;
     text-transform: uppercase;
-    color: #000000; 
+    color: #000000; /* Gold for headings */
 }
 
 .footer-section p, .footer-section ul {
@@ -216,7 +216,7 @@ iframe {
 }
 
 .footer-section ul li a:hover {
-    color: #000dff; 
+    color: #000dff; /* Gold on hover */
 }
 
 .footer-bottom {
@@ -230,7 +230,79 @@ iframe {
     margin: 0;
 }
 
+/* gallery */
 
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 20px;
+    justify-content: center;
+}
+
+h1{
+    margin-top: 5%;
+    text-align: center;
+    font-family: "Annie Use Your Telescope";
+    font-size: 50px; 
+}
+
+.gallery img {
+    width: 200px;
+    height: auto;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Lightbox Styles */
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.4);
+}
+
+.lightbox:target {
+    display: flex;
+}
+
+/* Close Button */
+.lightbox-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 2rem;
+    color: white;
+    text-decoration: none;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px 15px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.lightbox-close:hover {
+    background: rgba(255, 255, 255, 0.8);
+    color: black;
+}
 
 /* Media query for nav bar */
 @media (max-width: 1230px) {
@@ -256,8 +328,7 @@ iframe {
 
     .navbar-brand {
         flex-direction: column;
-        
-        font-size: 50px;      /* Reduce brand size for smaller screens */
+        font-size: 30px;      /* Reduce brand size for smaller screens */
         margin-bottom: 15px;  /* Add space below brand */
     }
 
@@ -267,8 +338,8 @@ iframe {
     }
 
     .dropdown-item {
-        /*justify-content: flex-start; */
-        font-size: 30px;      /* Adjust dropdown item size */
+        justify-content: flex-start;
+        font-size: 20px;      /* Adjust dropdown item size */
     }
 
     .theme-toggle-container {
@@ -305,10 +376,8 @@ iframe {
     }
 
     .navbar-brand {
-        flex-direction: row;
-        text-align: center;
-        
-        font-size: 70px;      /* Reduce brand size for smaller screens */
+        flex-direction: column;
+        font-size: 30px;      /* Reduce brand size for smaller screens */
         margin-bottom: 15px;  /* Add space below brand */
     }
 
@@ -319,88 +388,7 @@ iframe {
 
     .dropdown-item {
         justify-content: flex-start;
-        font-size: 30px;      /* Adjust dropdown item size */
-    }
-
-    .theme-toggle-container {
-        justify-content: right; /* Center the theme toggle button */
-        padding-right: 0;       /* Reset padding */
-    }
-}
-
-
-
-/* galery */
-
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 10px;
-    padding: 20px;
-}
-
-.gallery img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.gallery img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-}
-
-.gallery-item {
-    overflow: hidden;
-}
-
-
-
-/* Media query for home page images */
-@media (max-width: 600px) {
-    .welcome-container-top {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .navbar {
-        flex-direction: column; /* Stack items vertically */
-        align-items: center;   /* Center the items */
-        text-align: center;    /* Center the text */
-        margin: auto;
-        border-radius: 10px;
-    }
-
-    .container-fluid {
-        max-width: 99%; /* Constrain the width for smaller screens */
-        margin: 0 auto; /* Center the container horizontally */
-        padding: 10px; /* Add consistent padding */
-        box-sizing: border-box; /* Ensure padding doesn't affect the width */
-    }
-
-    .nav-item {
-        margin-left: 0;       /* Reset left margin */
-        margin-bottom: 10px;  /* Add spacing between items */
-    }
-
-    .navbar-brand {
-        flex-direction: row;
-        text-align: center;
-        
-        font-size: 30px;      /* Reduce brand size for smaller screens */
-        margin-bottom: 15px;  /* Add space below brand */
-    }
-
-    .nav-dropdown {
-        font-size: 30px;      /* Adjust dropdown font size */
-        margin-left: 0;       /* Reset left margin */
-    }
-
-    .dropdown-item {
-        justify-content: flex-start;
-        font-size: 30px;      /* Adjust dropdown item size */
+        font-size: 20px;      /* Adjust dropdown item size */
     }
 
     .theme-toggle-container {
