--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ iframe {
     margin-bottom: 10px;
     font-size: 16px;
     text-transform: uppercase;
-    color: #000000; /* Gold for headings */
+    color: #000000; 
 }
 
 .footer-section p, .footer-section ul {
@@ -216,7 +216,7 @@ iframe {
 }
 
 .footer-section ul li a:hover {
-    color: #000dff; /* Gold on hover */
+    color: #000dff; 
 }
 
 .footer-bottom {
@@ -230,34 +230,130 @@ iframe {
     margin: 0;
 }
 
-/* gallery */
 
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 20px;
-    justify-content: center;
+
+/* Media query for nav bar */
+@media (max-width: 1230px) {
+    .navbar {
+        flex-direction: column; /* Stack items vertically */
+        align-items: center;   /* Center the items */
+        text-align: center;    /* Center the text */
+        margin: auto;
+        border-radius: 10px;
+    }
+
+    .container-fluid {
+        max-width: 99%; /* Constrain the width for smaller screens */
+        margin: 0 auto; /* Center the container horizontally */
+        padding: 10px; /* Add consistent padding */
+        box-sizing: border-box; /* Ensure padding doesn't affect the width */
+    }
+
+    .navbar, .navbar-expand-lg, .bg-body-tertiary {
+        margin-left: 10px;     /* Reset left margin */
+        margin-bottom: 10px;   /* Add spacing between items */
+    }
+
+    .navbar-brand {
+        flex-direction: column;
+        
+        font-size: 50px;      /* Reduce brand size for smaller screens */
+        margin-bottom: 15px;  /* Add space below brand */
+    }
+
+    .nav-dropdown {
+        font-size: 40px;      /* Adjust dropdown font size */
+        margin-left: 0;       /* Reset left margin */
+    }
+
+    .dropdown-item {
+        /*justify-content: flex-start; */
+        font-size: 30px;      /* Adjust dropdown item size */
+    }
+
+    .theme-toggle-container {
+        justify-content: right; /* Center the theme toggle button */
+        padding-right: 0;       /* Reset padding */
+    }
 }
 
-h1{
-    margin-top: 5%;
-    text-align: center;
-    font-family: "Annie Use Your Telescope";
-    font-size: 50px; 
+/* Media query for home page images */
+@media (max-width: 1000px) {
+    .welcome-container-top {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar {
+        flex-direction: column; /* Stack items vertically */
+        align-items: center;   /* Center the items */
+        text-align: center;    /* Center the text */
+        margin: auto;
+        border-radius: 10px;
+    }
+
+    .container-fluid {
+        max-width: 99%; /* Constrain the width for smaller screens */
+        margin: 0 auto; /* Center the container horizontally */
+        padding: 10px; /* Add consistent padding */
+        box-sizing: border-box; /* Ensure padding doesn't affect the width */
+    }
+
+    .nav-item {
+        margin-left: 0;       /* Reset left margin */
+        margin-bottom: 10px;  /* Add spacing between items */
+    }
+
+    .navbar-brand {
+        flex-direction: row;
+        text-align: center;
+        
+        font-size: 70px;      /* Reduce brand size for smaller screens */
+        margin-bottom: 15px;  /* Add space below brand */
+    }
+
+    .nav-dropdown {
+        font-size: 40px;      /* Adjust dropdown font size */
+        margin-left: 0;       /* Reset left margin */
+    }
+
+    .dropdown-item {
+        justify-content: flex-start;
+        font-size: 30px;      /* Adjust dropdown item size */
+    }
+
+    .theme-toggle-container {
+        justify-content: right; /* Center the theme toggle button */
+        padding-right: 0;       /* Reset padding */
+    }
+}
+
+
+
+/* galery */
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    padding: 20px;
 }
 
 .gallery img {
-    width: 200px;
+    width: 100%;
     height: auto;
     border-radius: 8px;
-    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .gallery img:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+.gallery-item {
+    overflow: hidden;
 }
 
 /* Lightbox Styles */
@@ -304,52 +400,9 @@ h1{
     color: black;
 }
 
-/* Media query for nav bar */
-@media (max-width: 1230px) {
-    .navbar {
-        flex-direction: column; /* Stack items vertically */
-        align-items: center;   /* Center the items */
-        text-align: center;    /* Center the text */
-        margin: auto;
-        border-radius: 10px;
-    }
-
-    .container-fluid {
-        max-width: 99%; /* Constrain the width for smaller screens */
-        margin: 0 auto; /* Center the container horizontally */
-        padding: 10px; /* Add consistent padding */
-        box-sizing: border-box; /* Ensure padding doesn't affect the width */
-    }
-
-    .navbar, .navbar-expand-lg, .bg-body-tertiary {
-        margin-left: 10px;     /* Reset left margin */
-        margin-bottom: 10px;   /* Add spacing between items */
-    }
-
-    .navbar-brand {
-        flex-direction: column;
-        font-size: 30px;      /* Reduce brand size for smaller screens */
-        margin-bottom: 15px;  /* Add space below brand */
-    }
-
-    .nav-dropdown {
-        font-size: 40px;      /* Adjust dropdown font size */
-        margin-left: 0;       /* Reset left margin */
-    }
-
-    .dropdown-item {
-        justify-content: flex-start;
-        font-size: 20px;      /* Adjust dropdown item size */
-    }
-
-    .theme-toggle-container {
-        justify-content: right; /* Center the theme toggle button */
-        padding-right: 0;       /* Reset padding */
-    }
-}
 
 /* Media query for home page images */
-@media (max-width: 1000px) {
+@media (max-width: 600px) {
     .welcome-container-top {
         flex-direction: column;
         align-items: center;
@@ -376,19 +429,21 @@ h1{
     }
 
     .navbar-brand {
-        flex-direction: column;
+        flex-direction: row;
+        text-align: center;
+        
         font-size: 30px;      /* Reduce brand size for smaller screens */
         margin-bottom: 15px;  /* Add space below brand */
     }
 
     .nav-dropdown {
-        font-size: 40px;      /* Adjust dropdown font size */
+        font-size: 30px;      /* Adjust dropdown font size */
         margin-left: 0;       /* Reset left margin */
     }
 
     .dropdown-item {
         justify-content: flex-start;
-        font-size: 20px;      /* Adjust dropdown item size */
+        font-size: 30px;      /* Adjust dropdown item size */
     }
 
     .theme-toggle-container {
