--- a/style.css
+++ b/style.css
@@ -461,3 +461,16 @@ ery */
     }
 }
 
+#service-container {
+    margin:50px;
+}
+.service-cards {
+    margin-bottom:50px;
+    }
+
+.service-cards a{
+    background-color: #000!important;
+}
+
+.carousel-indicators button {background-color:gray!important;}
+.carousel-indicators button.active {background-color: black!important;}
