--- a/stylesercon.css
+++ b/stylesercon.css
@@ -12,6 +12,17 @@
 .carousel-indicators button {background-color:gray!important;}
 .carousel-indicators button.active {background-color: black!important;}
 
+#slider {
+    width: 80%; 
+    margin:auto;
+    margin: 20px;
+}
+
+#dog-weight {
+    text-align: center;
+    text-decoration: underline;
+}
+
 @media (max-width: 600px) {
     #service-container {
         margin:10px;
