--- a/stylesercon.css
+++ b/stylesercon.css
@@ -12,10 +12,15 @@
 .carousel-indicators button {background-color:gray!important;}
 .carousel-indicators button.active {background-color: black!important;}
 
+#contact {
+    width:600px;
+    margin:auto;
+    text-align:center;
+}
+
 #slider {
     width: 80%; 
     margin:auto;
-    margin: 20px;
 }
 
 #dog-weight {
