More form styling

--- a/stylesercon.css
+++ b/stylesercon.css
@@ -16,6 +16,7 @@
     width:600px;
     margin:auto;
     text-align:center;
+    margin-top:45px;
 }
 
 #slider {
@@ -36,6 +37,13 @@
     margin-bottom:20px;
 }
 
+.btn-check+.btn {
+    background-color: white;
+    color:blue
+}
+.btn-check:checked+.btn {
+    
+}
 
 
 @media (max-width: 600px) {
