--- a/stylesercon.css
+++ b/stylesercon.css
@@ -15,6 +15,19 @@
 #contact {
     text-align:center;
     margin-top:45px;
+    padding:20px;
+    border-radius:20px;
+    border:1px solid gray;
+    margin-bottom: 40px;
+}
+
+
+
+#contactdets h4{
+    padding-bottom:15px;
+}
+#contactdets {
+    font-size:18px;
 }
 
 #slider {
