--- a/stylesercon.css
+++ b/stylesercon.css
@@ -34,6 +34,9 @@
     width: 80%; 
     margin:auto;
 }
+.contactbox {
+    margin-bottom: 40px!important;
+}
 
 #dog-weight {
     text-align: center;
@@ -52,8 +55,8 @@
     background-color: white;
     color:blue
 }
-.btn-check:checked+.btn {
-    
+#contactdets a{
+    color:black;
 }
 
 
@@ -64,4 +67,11 @@
     .service-cards > div {
         margin-bottom:30px;
         }
+    #contactdets {
+        padding-top:20px;
+        text-align:center;
+    }
+    .addr{
+        padding-right:12px!important;
+    }
 }
