--- a/stylesercon.css
+++ b/stylesercon.css
@@ -7,6 +7,12 @@
 
 .service-cards a{
     background-color: #000!important;
+    border-color:#000;
+}
+
+.card-img-top {
+    height: 200px; 
+    object-fit: cover; 
 }
 
 .carousel-indicators button {background-color:gray!important;}
