--- a/stylesercon.css
+++ b/stylesercon.css
@@ -1,8 +1,12 @@
 #service-container {
-    margin:50px;
+    margin-left:50px;
+    margin-right:50px;
 }
+
 .service-cards {
     margin-bottom:50px;
+    margin-left:50px;
+    margin-right:50px;
     }
 
 .service-cards a{
