--- a/style.css
+++ b/style.css
@@ -171,6 +171,22 @@ h1{
     font-size: 50px; 
 }
 
+h5{
+    margin-top: 1%;
+    text-align: center;
+    font-family: "Annie Use Your Telescope";
+    font-size: 35px; 
+    padding : 5%;
+}
+
+h3{
+    text-align: center;
+    font-family: "Annie Use Your Telescope";
+    font-size: 35px; 
+    padding : 5%;
+}
+
+
 
 /* Footer Styling */
 .footer {
